Fix jumpiness of the layout

--- a/sass/adminimal_wwm.scss
+++ b/sass/adminimal_wwm.scss
@@ -38,6 +38,7 @@
     border: 1px solid #c0c0c0;
     margin: 1em 0;
     background-color: #f5f5f2;
+    max-width: 100vw;
 
     .tabledrag-toggle-weight-wrapper {
       border-bottom: 0;
@@ -83,9 +84,9 @@
   }
 
   .layout-container {
-    max-width: 1500px;
+    width: min(95%, 1500px);
 
-    @media screen and (min-width: 1500px) {
+    @media screen and (min-width: 0px) {
       margin: auto;
     }
   }
